fixed gradle build